[package]
name = "spritezip"
version = "0.1.0"
authors = ["Daniel Wong <drojfjord@gmail.com>"]

[dependencies]
image = "0.24.2"
brotli = "2.5.0"
time = "0.3.9"
walkdir = "2.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
number_prefix = "0.4.0"
oxipng = "6.0.1"
png = "0.17.5"